fixed css align

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -43,6 +43,7 @@
 #donut-balance-and-icon{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 #leaderboard{
